examples/test/testpolicy16310.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16310
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key25: value45
      key16: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value19
      podSelector:
        matchLabels:
          key24: value29
          key42: value39
